// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperUpdateButton is rendered 1`] = `
<EuiButton
  className="euiSuperUpdateButton"
  color="primary"
  fill={true}
  iconType="refresh"
  isDisabled={false}
  isLoading={false}
  onClick={[Function]}
  textProps={
    Object {
      "className": "euiSuperUpdateButton__text",
    }
  }
>
  <EuiI18n
    default="Refresh"
    token="euiSuperUpdateButton.refreshButtonLabel"
  />
</EuiButton>
`;

exports[`EuiSuperUpdateButton isDisabled 1`] = `
<EuiButton
  className="euiSuperUpdateButton"
  color="primary"
  fill={true}
  iconType="refresh"
  isDisabled={true}
  isLoading={false}
  onClick={[Function]}
  textProps={
    Object {
      "className": "euiSuperUpdateButton__text",
    }
  }
>
  <EuiI18n
    default="Refresh"
    token="euiSuperUpdateButton.refreshButtonLabel"
  />
</EuiButton>
`;

exports[`EuiSuperUpdateButton isLoading 1`] = `
<EuiButton
  className="euiSuperUpdateButton"
  color="secondary"
  fill={true}
  iconType="kqlFunction"
  isDisabled={false}
  isLoading={true}
  onClick={[Function]}
  textProps={
    Object {
      "className": "euiSuperUpdateButton__text",
    }
  }
>
  <EuiI18n
    default="Updating"
    token="euiSuperUpdateButton.updatingButtonLabel"
  />
</EuiButton>
`;

exports[`EuiSuperUpdateButton needsUpdate 1`] = `
<EuiButton
  className="euiSuperUpdateButton"
  color="secondary"
  fill={true}
  iconType="kqlFunction"
  isDisabled={false}
  isLoading={false}
  onClick={[Function]}
  textProps={
    Object {
      "className": "euiSuperUpdateButton__text",
    }
  }
>
  <EuiI18n
    default="Update"
    token="euiSuperUpdateButton.updateButtonLabel"
  />
</EuiButton>
`;
